# saltshaker

./: .envrc.tpu  .gitignore  README.md  buckets.pkl  create_aspect.py  encoder.py  export_buckets.py  finetune.py  gui.py  pyproject.toml  requirements.txt  setup.cfg  shared.py  train_config.json
config/: tpu_default.yaml
dataloaders/: filedisk_loader.py
gui_elements/: data_tab.py  latents_tab.py  train_tab.py
scripts/: tpu_test.py
src/saltshaker/: __init__.py  app.py  ema.py  finetune.py  gpu.py  settings.py  shared.py  tpu.py  trainer.py
src/saltshaker/app/: __init__.py  gui.py
src/saltshaker/app/tabs/: data.py  latents.py
src/saltshaker/data/: __init__.py  bucket.py  dataset.py  encoder.py  filedisk_loader.py
src/saltshaker/trainer/: __init__.py  ema.py  log.py  trainer-new.py  trainer.py
src/saltshaker/web/: __init__.py  webui.py
src/saltshaker/web/tabs/: data.py  latents.py  train.py
