[metadata]
name = saltshaker
author = Andrew Powers-Holmes
author_email = aholmes@omnom.net
maintainer = Andrew Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
py_modules =
    saltshaker

include_package_data = True
install_requires =
    accelerate ~= 0.18.0
    datasets >= 2.11.0, < 3.0.0
    diffusers >= 0.15.1
    gradio >= 3.32.0
    huggingface-hub >= 0.13.0
    imagesize >= 1.4.1
    numpy >= 1.24.3
    Pillow >= 9.5.0, < 10.0.0
    psutil >= 5.9.5, < 6.0.0
    pydantic >= 1.10.8
    rich >= 13.0.0
    safetensors ~= 0.3.1
    scipy ~= 1.10.1
    tokenizers >= 0.13.3
    torch >= 2.0.0, < 2.2.0
    torchvision
    tqdm ~= 4.65.0
    tqdm-loggable ~= 0.1.3
    transformers >= 4.29.0, < 5.0.0
    typer[all] >= 0.9.0

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    black >= 22.3.0
    pre-commit >= 3.0.0
    ruff >= 0.0.264
    setuptools-scm >= 7.0.5
    mypy >= 0.981
    torch-xla == 2.0
gpu =
    pynvml ~= 11.5.0
    bitsandbytes >= 0.38.1
tpu =
    torch-xla[tpuvm] == 2.0

[options.entry_points]
console_scripts =
    saltshaker = saltshaker.app:app

[flake8]
max-line-length = 110
ignore =
    F841 # variable assigned but not used; tedious during dev
    F401 # as is "imported module unused"
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv

[mypy]
plugins =
    pydantic.mypy
